# sentinel-ai

./: .env.example  .gitignore  PHASES.TXT  docker-compose.yml  pyproject.toml  test_output.txt
backend/: .dockerignore  Dockerfile  alembic.ini
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/api/: __init__.py  router.py
backend/app/common/: __init__.py  exceptions.py  responses.py
docs/: AI_ONBOARDING.md  AI_PIPELINE.md  API_SPECS.md  DATABASE.md  DEVELPOMENT_GUIDELINES.md  HLD.md  LLD.md  PRD.md  PROJECT_OVERVIEW.md  TECH_STACK.md
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: index.css  main.tsx
frontend/src/api/: auth.ts  (+5 more)
frontend/tests/: App.test.tsx  setup.ts
tests/: conftest.py  test_chunking.py  test_documents_integration.py  test_embedding_orchestrator_query.py  test_ingestion_integration.py  test_ingestion_orchestrator.py  test_memory_formatter.py  test_memory_service.py  test_metadata.py  test_prompt_builder.py  test_response_formatter.py  test_response_integration.py  test_response_parser.py  test_response_provider_grok.py  test_response_service.py  test_retrieval_infrastructure.py  test_retrieval_service.py  test_supervisor_infrastructure.py  test_supervisor_integration.py  test_supervisor_intent_classification.py  test_supervisor_orchestration.py  test_supervisor_workflow_planning.py
tests/integration/: conftest.py  test_conversation_e2e.py  test_conversation_repository.py  test_conversation_router.py  test_conversation_service.py  test_embedding_integration.py  test_memory_integration.py
(+172 files in other folders)
